--- a/impress_extend.tex
+++ b/impress_extend.tex
@@ -72,7 +72,7 @@
 \newcommand{\techBb}{Score-Based Cache Management}
 %\newcommand{\technew}{similarity-guided layer-ahead speculative prefetching}
 \newcommand{\techNew}{Layer-Aware KV Prefetching}
-\newcommand{\technew}{layer-aware prefetching}
+\newcommand{\technew}{layer-aware KV prefetching}
 
 \newcommand{\wj}[1]{\textcolor{black}{#1}}
 \newcommand{\xz}[1]{\textcolor{red}{#1}}
@@ -81,7 +81,7 @@
 \newcommand{\fv}[1]{\textcolor{black}{#1}}
 \newcommand{\fvc}[1]{\textcolor{black}{#1}}
 \newcommand{\zrd}[1]{\textcolor{orange}{#1}}
-\newcommand{\zrdnew}[1]{\textcolor{red}{#1}}
+\newcommand{\zrdnew}[1]{\textcolor{blue}{#1}}
 \newcommand{\cp}[1]{\textcolor{red}{#1}}
 \graphicspath{{./fig/}}
 \begin{document}
