--- a/tex/design_new.tex
+++ b/tex/design_new.tex
@@ -12,7 +12,7 @@ The sets of important token indices are highly similar between adjacent Transfor
 
 \zrdnew{To quantify this, we compute the similarity between important token index sets across adjacent Transformer layers for several OPT models. In each layer, we select the top 25\% of tokens ranked by their attention-based importance scores, and measure the similarity between this index set and that of the next layer using the Jaccard index~\cite{jaccard-18}. As shown in Figure~\ref{fig:sim_layer}, each bar represents the similarity between two neighboring layers. We find that similarity values are consistently bounded within a relatively tight interval, with the sampled OPT-6.7B model exhibiting similarities across layers that largely fall between 0.40 and 0.85, and an average similarity of 0.48. This indicates that the attention heads in neighboring layers tend to focus on similar token positions. }
 
-\zrdnew{Furthermore, we find that tokens that are more important in one layer tend to remain important in the next layer. As shown in Figure~\ref{fig:layer_wise_r}, we first rank all tokens in each layer by their importance and take the top 25\% as important tokens. Within this important set, we further partition token positions into finer bins according to their importance percentiles. For each bin, we then measure the recall ratio of important tokens in the next layer, defined as the fraction of tokens in that bin which are still classified as important in the subsequent layer. The resulting curves show that bins containing tokens with higher importance in the current layer consistently achieve larger recall ratios, and all models and datasets exhibit the same overall trend.
+\zrdnew{Furthermore, we find that tokens that are more important in one layer tend to remain important in the next layer. As shown in Figure~\ref{fig:layer_wise_r}, we first rank all tokens in each layer by their importance and take the top 25\% as important tokens. Within this important set, we further partition token positions into finer bins according to their relative importance percentiles (e.g., the '0 – 20\%' bin represents the top - 20\% most critical tokens within this set). For each bin, we then measure the recall ratio of important tokens in the next layer, defined as the fraction of tokens in that bin which are still classified as important in the subsequent layer. The resulting curves show that bins containing tokens with higher importance in the current layer consistently achieve larger recall ratios, and all models and datasets exhibit the same overall trend.
 }
 
 
@@ -23,7 +23,7 @@ The sets of important token indices are highly similar between adjacent Transfor
 	\includegraphics[width=3.2in, height=0.6in]{sim-25.pdf}
 	\vspace{-0.1in}
 	\caption{
-		Similarity of important token index sets between adjacent transformer layers in OPT models.}
+		\zrdnew{Similarity of important token index sets between adjacent transformer layers in OPT models.}}
 	\label{fig:sim_layer}
 	\vspace{-0.1in}
 \end{figure}
@@ -32,7 +32,7 @@ The sets of important token indices are highly similar between adjacent Transfor
 	\centering
 	\includegraphics[width=3.3in, height=1.3in]{importance_transition_two_datasets.pdf}
 	\vspace{-0.1in}
-	\caption{Recall ratio of next layer important tokens vs.\ current layer importance percentile.
+	\caption{\zrdnew{Recall ratio of next layer important tokens vs.\ current layer importance percentile.}
 		}
 	\label{fig:layer_wise_r}
 	\vspace{-0.1in}
@@ -45,44 +45,52 @@ The sets of important token indices are highly similar between adjacent Transfor
 %
 %\zrdnew{To address these issues, we propose a more accurate and flexible guidance-based prefetching method that efficiently prefetches important KVs for the next layer while overlapping prefetching with computation. We studied the important tokens identified by the method mentioned in \cref{sec:techa} and found that the distribution of important tokens in adjacent layers is highly similar. Moreover, the index sets with higher importance rankings exhibit higher similarity. This similarity is quantified using the Jaccard index.}
 
-\cp{
-\textbf{Design.} 
-As shown in Figure~\ref{fig:simiload-ttft}(b), KV loading can only start after token selection completes, creating a dependency that causes GPU stalls and limits computation–I/O overlap.
-To mitigate this overhead, we employ prefetching to overlap data loading with computation. 
-However, a key challenge remains: the important tokens for the next transformer layer cannot be identified until the current layer’s computation completes, making it difficult to determine which KVs to prefetch in advance.}
+%\cp{
+%\textbf{Design.} 
+%As shown in Figure~\ref{fig:simiload-ttft}(b), KV loading can only start after token selection completes, creating a dependency that causes GPU stalls and limits computation–I/O overlap.
+%To mitigate this overhead, we employ prefetching to overlap data loading with computation. 
+%However, a key challenge remains: the important tokens for the next transformer layer cannot be identified until the current layer’s computation completes, making it difficult to determine which KVs to prefetch in advance.}
+%
+%\cp{To solve this challenge, we propose the \technew{} mechanism, which exploits the strong similarity of important token index sets across adjacent layers. 
+%During the computation of the current layer, \technew{} asynchronously prefetches the next layer’s important KVs into GPU memory by leveraging the importance distribution from the current layer. 
+%For example, 
+%as illustrated in Figure~\ref{fig:simiload-ttft}(b), KV loading in Layer~1 cannot begin until token selection completes, causing GPU stalls. 
+%In contrast, Figure~\ref{fig:simiload-ttft}(c) shows that using Layer~0’s importance information to guide the prefetching of Layer~1’s KVs during computation effectively hides I/O latency and reduces idle time. 
+%Specifically, the important token positions identified in Layer~0 are used as an approximation of those in Layer~1, allowing the system to prefetch the corresponding key–value pairs of tokens at the same positions in the next layer, making them readily available when computation proceeds.
+%}
+\zrdnew{\textbf{Design.} Based on the above observations, we propose the layer-aware KV prefetching mechanism. The core idea is that owing to the high similarity of important token index sets across adjacent layers, we can utilize the importance distribution of the current layer to approximate and speculatively prefetch the critical KVs for the subsequent layer. This enables the system to proactively load the next layer's KVs using idle PCIe bandwidth while the current layer is still being computed. By overlapping these I/O operations with GPU execution, HyperInfer effectively hides the data loading latency and eliminates the GPU stalls typically caused by the dependency between token identification and KV loading.}
 
-\cp{To solve this challenge, we propose the \technew{} mechanism, which exploits the strong similarity of important token index sets across adjacent layers. 
-During the computation of the current layer, \technew{} asynchronously prefetches the next layer’s important KVs into GPU memory by leveraging the importance distribution from the current layer. 
-For example, 
-as illustrated in Figure~\ref{fig:simiload-ttft}(b), KV loading in Layer~1 cannot begin until token selection completes, causing GPU stalls. 
-In contrast, Figure~\ref{fig:simiload-ttft}(c) shows that using Layer~0’s importance information to guide the prefetching of Layer~1’s KVs during computation effectively hides I/O latency and reduces idle time. 
-Specifically, the important token positions identified in Layer~0 are used as an approximation of those in Layer~1, allowing the system to prefetch the corresponding key–value pairs of tokens at the same positions in the next layer, making them readily available when computation proceeds.
-}
+\zrdnew{Figure 10 illustrates the impact of this mechanism on inference timelines. As shown in Figure 10(b), without prefetching, KV loading for Layer 1 must wait for token selection to complete, leaving the GPU idle. In contrast, Figure 10(c) shows that by using Layer 0’s importance information to guide the prefetching for Layer 1, the I/O latency is effectively hidden within the computation time of Layer 0, ensuring that KVs are readily available when the execution transitions to the next layer.}
 
+\zrdnew{While layer-aware KV prefetching effectively hides I/O latency, designing an efficient mechanism requires addressing two key challenges. First, using the current layer's important tokens to approximate those of the next layer is inherently speculative. Although similarity is high, inaccuracies are inevitable, necessitating a robust verification and recovery mechanism to ensure correctness without incurring high penalties. Second, prefetching I/O must be carefully scheduled. Since this is an opportunistic optimization utilizing idle PCIe bandwidth parallel to computation, the system must ensure that speculative loads do not interfere with the critical execution path or delay the subsequent demand loading of missing KVs.}
 
-\cp{
-While \technew{} hides part of the I/O latency, efficient prefetching still faces two issues. 
-First, using the current layer’s important tokens to approximate those of the next layer inevitably introduces inaccuracies, making both higher prefetch accuracy and a recovery mechanism necessary. 
-Second, prefetching I/O must be tightly coordinated with computation: if computation outlasts prefetching, I/O bandwidth is wasted; if prefetching exceeds computation time, speculative I/O falls on the critical path and any mispredicted prefetches add latency.}
+\zrdnew{
+To address the first issue, we implement a speculate-then-verify workflow. During the computation of the current layer (Layer $i$), HyperInfer speculatively loads the KVs for Layer $i+1$ based on the importance ranking. As the execution transitions to Layer $i+1$, the system performs a lightweight verification step: it executes the similarity-guided identification (see \S IV-B) using the probe heads to determine the ground-truth important tokens. HyperInfer then calculates the set difference between the ground-truth set and the already prefetched KVs. Only the missing KVs (the delta) are synchronously loaded on the critical path. Since the volume of these missing KVs is typically much smaller than the full set required for demand loading, this recovery step incurs significantly lower latency. Even in the worst-case scenario where prefetching fails completely, the system simply falls back to standard demand loading, ensuring that the performance is bounded.}
 
+%\cp{
+%To address the second issue, computation and prefetching I/O must be aligned in time, which requires accurate estimates of their durations. 
+%During the prefill stage, all transformer layers incur similar computational cost due to their identical structure. 
+%Thus, we use the measured computation time of the first layer as a proxy for the rest, treating it as the available prefetching window.
+%For I/O estimation, K/V vectors are stored in fixed-size chunks (e.g., \texttt{chunksize}=64). 
+%Given a set of target token IDs, we map each token to its corresponding chunk and identify the storage tier. 
+%SSD-resident chunks are \texttt{mmap}-loaded into CPU memory before the required K/Vs are transferred to GPU via PCIe, whereas CPU-resident chunks are directly transferred and GPU-resident chunks are accessed immediately. 
+%Profiling shows that chunk-fetch latency is stable within each tier. 
+%Thus, we measure the average per-chunk latency on SSD, CPU, and GPU and use these values as the I/O cost model. 
+%During prefetching, chunks are loaded in descending order of token importance until the prefetching time window  is filled, ensuring that prefetching aligns closely with computation and effectively hides I/O latency.
+%}
+\zrdnew{To address the second issue, we implement a contention-aware scheduling strategy that precisely aligns prefetching I/O with computation.
+First, to determine the safe prefetching window, we leverage the structural homogeneity of Transformer layers. We employ a runtime heuristic that estimates the current layer's computation time using an exponential moving average (EMA) of the execution times from previous layers. This approach filters out transient system jitter and provides a robust time budget. To ensure safety, we set the prefetching deadline conservatively (e.g., 95\% of the estimated window) to prevent I/O from extending onto the critical path.
+Second, to prevent resource contention, we execute prefetching commands via asynchronous CUDA streams. This design isolates the I/O operations on the PCIe bus, which is orthogonal to the on-chip HBM bandwidth heavily utilized by the computation kernels. Consequently, speculative prefetching can saturate idle I/O bandwidth without interfering with the critical path execution of the current layer.}
 
-\cp{
- To tackle the first issue, we rank all candidate tokens by their importance scores in the current layer and prefetch their corresponding KVs in descending order, as tokens with higher importance are more likely to remain important at the same indices in the next layer. 
-Before the next layer begins computation, a probe \textit{head-K} loading operation validates the prefetched results and synchronously loads any missing KVs on the critical path, as shown by the red-bordered KV loading in Figure~\ref{fig:simiload-ttft}(c). 
-Because the number of missing KVs is always no greater than the total set of KVs that would otherwise need to be loaded on demand, this fallback step incurs strictly lower latency than performing all KV loads directly on the critical path.
-}
-
-\cp{
-To address the second issue, computation and prefetching I/O must be aligned in time, which requires accurate estimates of their durations. 
-During the prefill stage, all transformer layers incur similar computational cost due to their identical structure. 
-Thus, we use the measured computation time of the first layer as a proxy for the rest, treating it as the available prefetching window.
-For I/O estimation, K/V vectors are stored in fixed-size chunks (e.g., \texttt{chunksize}=64). 
-Given a set of target token IDs, we map each token to its corresponding chunk and identify the storage tier. 
-SSD-resident chunks are \texttt{mmap}-loaded into CPU memory before the required K/Vs are transferred to GPU via PCIe, whereas CPU-resident chunks are directly transferred and GPU-resident chunks are accessed immediately. 
-Profiling shows that chunk-fetch latency is stable within each tier. 
-Thus, we measure the average per-chunk latency on SSD, CPU, and GPU and use these values as the I/O cost model. 
-During prefetching, chunks are loaded in descending order of token importance until the prefetching time window  is filled, ensuring that prefetching aligns closely with computation and effectively hides I/O latency.
-}
+\zrdnew{\textbf{Handling Mispredictions.} 
+	Since layer-aware prefetching is speculative, a small fraction of the loaded KVs may fall outside the target important token set of the next layer. 
+	HyperInfer enforces a strict policy to discard these mispredicted KVs, excluding them from the subsequent attention computation. 
+	We adopt this design choice for two reasons. 
+	First, it ensures \textit{performance determinism}. 
+	Including extra KVs would dynamically increase the sequence length, introducing variable computational overhead and memory consumption that could negate the latency benefits of prefetching. 
+	Second, it maintains \textit{resource efficiency}. 
+	Retaining mispredicted KVs would unnecessarily increase memory consumption and complicate runtime data management.
+	Although this approach discards data transferred via PCIe, this bandwidth was otherwise idle; thus, the speculation incurs \textit{zero opportunity cost} to the critical inference path while maintaining a rigorous and fair evaluation baseline.}
 
 
 
